openshift/Deployment_webhook-telegram-python.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: alertmanager-webhook-telegram-python
  labels:
    app: alertmanager-webhook-telegram-python
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alertmanager-webhook-telegram-python
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: alertmanager-webhook-telegram-python
    spec:
      containers:
        - name: alertmanager-webhook-telegram-python
          image: >-
            image-registry.openshift-image-registry.svc:5000/sb/alertmanager-webhook-telegram-python:production
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
          resources: {}
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
