openshift/Route_alertmanager-telegram.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: webhook-telegram
  labels:
    app: alertmanager-webhook-telegram-python
spec:
  host: webhook-telegram-alertmanager-telegram.apps.myfamous-cluster.net
  to:
    kind: Service
    name: alertmanager-webhook-telegram-python
    weight: 100
  port:
    targetPort: 9119-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
